--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -9,17 +9,21 @@
   <body>
     <section class="container">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview baku">
-        <h1>Baku</h1>
+      <div class="row">
+        <div class="preview baku">
+          <h1>Baku</h1>
+        </div>
+        <div class="preview london">
+          <h1>London</h1>
+        </div>
       </div>
-      <div class="preview london">
-        <h1>London</h1>
-      </div>
-      <div class="preview madrid">
-        <h1>Madrid</h1>
-      </div>
-      <div class="preview rome">
-        <h1>Rome</h1>
+      <div class="row">
+        <div class="preview madrid">
+          <h1>Madrid</h1>
+        </div>
+        <div class="preview rome">
+          <h1>Rome</h1>
+        </div>
       </div>
     </section>
   </body>
